--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" href="/assets/favicon.png">
   
   <script src="/js/master.js"></script>
-  <script src="https://cdn.plot.ly/plotly-2.11.1.min.js"></script>
+  <script src="/js/plotly-2.11.1.min.js"></script>
   <script src="https://cdn.rawgit.com/phylocanvas/phylocanvas-quickstart/v2.8.1/phylocanvas-quickstart.js"></script>
 </head>
 
