--- a/templates/api.html
+++ b/templates/api.html
@@ -131,6 +131,15 @@
       </span>
 
       <span>
+        <h4>GET /api/tmscore/{protein1-id}/{protein2-id}</h4>
+        <p>Fetches the TM-Align score between two proteins.</p>
+        <p>Example:</p>
+<pre><code>GET /api/tmscore/feb374a731e2b22eb4e39f8e598f1660/dc6800cc9205e6311f83475627e4fbbb
+0.12963
+</code></pre>
+      </span>
+
+      <span>
         <h4>GET /assets/cluster.json</h4>
         <p>Fetches the 2D TM-align cluster for all entries in the database. This JSON file contains the coordinates, number of residues, and corresponding labels.</p>
         <p>Example:</p>
